cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 23)
project(Producer)
#find_library(OpenCV)
find_package(OpenCV)
include_directories(${OpenCV_INCLUDE_DIRS})
message(STATUS "start running cmake...")
find_package(Boost 1.76.0)
if(Boost_FOUND)
    message(STATUS "boost found")
    include_directories("/usr/local/Cellar/boost/1.76.0/include/boost")
endif()
add_executable(Producer main.cpp udpSend/udpSend.cpp udpSend/udpSend.h udpSocket/udpSocket.cpp udpSocket/udpSocket.h params.h ImageProcessor/imgProcessor.cpp ImageProcessor/imgProcessor.h blockingQueue/blockingQueue.h)

target_link_libraries(Producer ${OpenCV_LIBS})
include_directories(${Boost_INCLUDE_DIRS})
target_link_libraries(Producer ${Boost_LIBRARIES})